src/scss/main.scss
//--- MODULES ---/
@import "./slick";

//--- FONTS ---//
$fonts: (
  ('Light', 400),
  ('Medium', 500),
  ('SemiBold', 600),
  ('Bold', 700)
);

@each $name, $weight in $fonts {
  @font-face {
    font-family: WorkSans;
    font-weight: $weight;
    src: url('../assets/fonts/WorkSans-#{$name}.ttf') format('truetype');
  }
}

//--- GENERAL OVERWRITES ---//

html {
  font-size: 100%;
  scroll-behavior: smooth;
  overflow-x: hidden;
  font-family: 'WorkSans', sans-serif;
}

p, h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

